<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bodyBK" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/titleBK"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/bodyMarginLR"
                android:text="@string/repairwordSTR"
                android:textColor="@color/titleFontC" />

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/marginTB"
                android:layout_marginRight="@dimen/marginR"
                android:layout_marginTop="@dimen/marginTB"
                android:text="@string/submitSTR" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/bodyMarginLR"
            android:layout_marginRight="@dimen/bodyMarginLR"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/itemGap"
                android:text="@string/oldwordSTR" 
                android:textColor="@color/fontC"/>

            <EditText
                android:id="@+id/oldpwd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/itemGap"
                android:text="@string/newwordSTR"  
                android:textColor="@color/fontC"/>

            <EditText
                android:id="@+id/newpwd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword" />
            
            <TextView
                android:id="@+id/error_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#f00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reinputSTR" 
                android:textColor="@color/fontC" />

            <EditText
                android:id="@+id/repwd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>